prodMetadata/src/objects/Contact_related_to_Track_a_Call__c.object
<CustomObject>
    <description>Junction object to relate Contacts to Track a Call records</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Related Contact</description>
        <inlineHelpText>Related Contact</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.kw__KW_Category__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>This window limits to only KnowWho records. Click See All Results to see other records.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Other Track a Calls for this Contact</relationshipLabel>
        <relationshipName>Contacts_related_to_Track_a_Calls</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes about this Contact on this call</description>
        <inlineHelpText>Notes about this Contact on this call</inlineHelpText>
        <label>Notes about this Contact on this call</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Track_a_Call__c</fullName>
        <description>Related Track-a-Call record</description>
        <inlineHelpText>Related Track-a-Call record</inlineHelpText>
        <label>Track a Call record</label>
        <referenceTo>Activity_Junction__c</referenceTo>
        <relationshipLabel>Other Contacts related to this Track-a-Call</relationshipLabel>
        <relationshipName>Contacts_related_to_Track_a_Calls</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contact related to Track a Call</label>
    <nameField>
        <displayFormat>ConTrk-{00000}</displayFormat>
        <label>ConTrackCall ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts related to Track a Calls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>